problems with macbook's trackpad #28915

Closed
opened 2011-10-14 14:56:13 +02:00 by Kris Slazinski · 16 comments

%%%Hi, while Blender 2.5x including 2.60 RC2 works really well on a Mac and is better integrated with OS X than 2.4x ever was, there is one issue with Macbook trackpad - when you scroll the view with 2 fingures gesture, the view sometimes zoom in or zooms out really fast (I've attached short video to show you what I mean). It's when you scroll a little faster then normal. Only Blender acts like this - all other apps on a Mac don't react this way.

While trackpad is sensitive to speed of the gestures, it is a strange behaviour - the view shouldn't zoom in/out when you scroll - and even then, not as fast as in the video. Macbook's trackpad is very precise and easy to use. From time to time I even use it in graphic software. In Blender, becuase of this bug mentioned, it is more difficult to use it.%%%

%%%Hi, while Blender 2.5x including 2.60 RC2 works really well on a Mac and is better integrated with OS X than 2.4x ever was, there is one issue with Macbook trackpad - when you scroll the view with 2 fingures gesture, the view sometimes zoom in or zooms out really fast (I've attached short video to show you what I mean). It's when you scroll a little faster then normal. Only Blender acts like this - all other apps on a Mac don't react this way. While trackpad is sensitive to speed of the gestures, it is a strange behaviour - the view shouldn't zoom in/out when you scroll - and even then, not as fast as in the video. Macbook's trackpad is very precise and easy to use. From time to time I even use it in graphic software. In Blender, becuase of this bug mentioned, it is more difficult to use it.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I've had problems uploading the video on blender.org. Here's the YouTube version:
http://www.youtube.com/watch?v=UnuA-RmrLrY

The last zoom in/out on the video is with pinch to zoom gesture. The first two are wrong behaviour of the scroll gestures.%%%

%%%I've had problems uploading the video on blender.org. Here's the YouTube version: http://www.youtube.com/watch?v=UnuA-RmrLrY The last zoom in/out on the video is with pinch to zoom gesture. The first two are wrong behaviour of the scroll gestures.%%%

%%%Jens, maybe you've got some ideas about this issue? Thanks.%%%

%%%Jens, maybe you've got some ideas about this issue? Thanks.%%%
Member

%%%Hi
I know this comes from lifting fingers accidently, which causes the gesture to switch to softdscroll->zoom.
I noticed this changed from OSX 10.6 -> 10.7 where also the magicmouse "wheel/pad" behaves like a gesture now ( same as 2 finger pan ).
Must see if timing tweaks can help here, but i fear we should soon go for NSTouch api to track all these new events better.
Disadvatage: it´s only available for 10.6 and higher.

Jens%%%

%%%Hi I know this comes from lifting fingers accidently, which causes the gesture to switch to softdscroll->zoom. I noticed this changed from OSX 10.6 -> 10.7 where also the magicmouse "wheel/pad" behaves like a gesture now ( same as 2 finger pan ). Must see if timing tweaks can help here, but i fear we should soon go for NSTouch api to track all these new events better. Disadvatage: it´s only available for 10.6 and higher. Jens%%%

%%%Not only is this caused by "accidental" lifting of the fingers, but generally users want to use the "swipe" gesture, where you intentionally lift your fingers off the trackpad (because you've run out of room) and expect it to continue scrolling out of momentum. This is pretty much universal for gesture apps I've seen (Preview, browsers, Photoshop).%%%

%%%Not only is this caused by "accidental" lifting of the fingers, but generally users want to use the "swipe" gesture, where you intentionally lift your fingers off the trackpad (because you've run out of room) and expect it to continue scrolling out of momentum. This is pretty much universal for gesture apps I've seen (Preview, browsers, Photoshop).%%%

%%%Jens, might it be NSTouch used only for >=10.6 builds, but 10.5 still use current behavior?%%%

%%%Jens, might it be NSTouch used only for >=10.6 builds, but 10.5 still use current behavior?%%%

%%%Any updates here? %%%

%%%Any updates here? %%%
Member

%%%No work done yet, i thought Mike Erwin could have a look whereas NDOF workout.

Jens%%%

%%%No work done yet, i thought Mike Erwin could have a look whereas NDOF workout. Jens%%%
Member

%%%I might have access to a new macbook in a couple of weeks, will check it then.%%%

%%%I might have access to a new macbook in a couple of weeks, will check it then.%%%

%%%I had an issue like this in Safari, where it would freeze when accidentally doing an extreme pinch zoom with the trackpad. It got fixed in an update though, not sure if this issue is the same but it may well be that this is an operating system bug. I don't see much room for this to go wrong in Blender itself. In any case it would be good to confirm if this issue still exists even.%%%

%%%I had an issue like this in Safari, where it would freeze when accidentally doing an extreme pinch zoom with the trackpad. It got fixed in an update though, not sure if this issue is the same but it may well be that this is an operating system bug. I don't see much room for this to go wrong in Blender itself. In any case it would be good to confirm if this issue still exists even.%%%

%%%Also, I can't redo this issue on a mid 2009 Macbook Pro with OS X 10.7.5, with Blender 2.61, 2.64 or latest svn.

Unless someone can confirm this issue still exists I suggest we close this report.%%%

%%%Also, I can't redo this issue on a mid 2009 Macbook Pro with OS X 10.7.5, with Blender 2.61, 2.64 or latest svn. Unless someone can confirm this issue still exists I suggest we close this report.%%%
Author

%%%In my case the bug is still present. I've reported this over an year ago. Blender versions has changed couple of times. I've just tested this with Blender 2.64. I've also updated OSX to 10.8.2. It is still the same. Just like in this video I've posted (2nd message, link to YouTube video). When you scroll too fast, you get extremly fast zoom in/out instead of paning while using trackpad's scroll function. I've never had any issues with native OSX apps, none in Safari, none in Adobe software. Only Blender. So I don't think it is an OS issue nor the hardware issue. One may like or dislike Apple, but their trackpads work very very good.

Oh, and when I say "scroll too fast". In fact it is very easy to reproduce this bug. You have to scroll very slow NOT to reproduce it. I have no issues working with Illustrator or Photoshop with a trackpad when I have to, but Blender? External mouse is the only way because of this bug.%%%

%%%In my case the bug is still present. I've reported this over an year ago. Blender versions has changed couple of times. I've just tested this with Blender 2.64. I've also updated OSX to 10.8.2. It is still the same. Just like in this video I've posted (2nd message, link to YouTube video). When you scroll too fast, you get extremly fast zoom in/out instead of paning while using trackpad's scroll function. I've never had any issues with native OSX apps, none in Safari, none in Adobe software. Only Blender. So I don't think it is an OS issue nor the hardware issue. One may like or dislike Apple, but their trackpads work very very good. Oh, and when I say "scroll too fast". In fact it is very easy to reproduce this bug. You have to scroll very slow NOT to reproduce it. I have no issues working with Illustrator or Photoshop with a trackpad when I have to, but Blender? External mouse is the only way because of this bug.%%%
Member

%%%Fix is in svn now. Here's the log I typed:

Mac OS X trackpad and 'mighty mouse' fix.

An old commit from Damien in 2010 tried to make mighty mouse touches work as if
this is a scrollwheel. The error in that code was that the "kinetic scrolling"
feature failed. When releasing your fingers, the events passed on to Blender
then switched from "trackpad pan" to "mousewheel zoom".

This commit makes trackpads and mighty mouse behave identical. Only difference
is that trackpad panning needs 2 fingers, mighty mouse only one.

Note that trackpad and mighty mouse 3d zoom works with holding ctrl!

All works nice with this kinetic feature now. Fun :)
%%%

%%%Fix is in svn now. Here's the log I typed: Mac OS X trackpad and 'mighty mouse' fix. An old commit from Damien in 2010 tried to make mighty mouse touches work as if this is a scrollwheel. The error in that code was that the "kinetic scrolling" feature failed. When releasing your fingers, the events passed on to Blender then switched from "trackpad pan" to "mousewheel zoom". This commit makes trackpads and mighty mouse behave identical. Only difference is that trackpad panning needs 2 fingers, mighty mouse only one. Note that trackpad and mighty mouse 3d zoom works with holding ctrl! All works nice with this kinetic feature now. Fun :) %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Easy workaround! For me, this problem goes away if I change "with Inertia" to "without Inertia" in System Preferences -> Trackpad. I have a MacBook Air with Snow Leopard (10.6.8), and Blender 2.65.%%%

%%%Easy workaround! For me, this problem goes away if I change "with Inertia" to "without Inertia" in System Preferences -> Trackpad. I have a MacBook Air with Snow Leopard (10.6.8), and Blender 2.65.%%%
Author

%%%There is no need to change preferences anymore. Ton fixed this issue. Latest builds work great with a trackpad.%%%

%%%There is no need to change preferences anymore. Ton fixed this issue. Latest builds work great with a trackpad.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28915
No description provided.